--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ certifi==2017.11.5
 chardet==3.0.4
 Django==1.11.7
 django-countries==5.1.1
+et-xmlfile==1.0.1
 idna==2.6
+jdcal==1.3
+jsonfield==2.0.2
+openpyxl==2.5.0
 pytz==2017.3
 raven==6.3.0
 requests==2.18.4
 stripe==1.75.1
-urllib3==1.22
 unicodecsv==0.14.1
-openpyxl==2.5.0
+urllib3==1.22
