--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2017.11.5
 chardet==3.0.4
 Django==1.11.7
 django-countries==5.1.1
+django-cookie-law==2.0.1
 et-xmlfile==1.0.1
 idna==2.6
 jdcal==1.3
