--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.1.9
 django-countries==5.3.3
 django-cookie-law==2.0.1
+django-impersonate==1.4.1
 jsonfield==2.0.2
 lxml==4.2.5
 openpyxl==2.5.9
