Add headless selenium driver tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 language: python
 
+addons:
+  firefox: latest
+
 python:
   - "3.7"
+
+before_install:
+  - export GECKODRIVER_VERSION=v0.24.0
+  - wget https://github.com/mozilla/geckodriver/releases/download/$GECKODRIVER_VERSION/geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
 
 install:
   - pip install -r requirements.txt
