--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ django-sesame==1.4
 pre-js-py==1.2.0
 google-api-python-client==1.7.7
 beautifulsoup4==4.7.1
+django-htmlmin==0.11.0
+html5lib==1.0.1
+webencodings==0.5.1
