Rework 'geocache' manage.py command
This commit cleans up the geocache command. In particular it now:
- takes an optional url argument
- show a better progress bar
- is optionally tested

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ jobs:
     # chrome
     - env:
       - SELENIUM_WEBDRIVER=default
+      - ENABLE_GEOCACHE_TEST=1
       addons:
         chrome: stable
       before_install:
@@ -19,6 +20,7 @@ jobs:
     # firefox
     - env:
         - SELENIUM_WEBDRIVER=firefox
+        - ENABLE_GEOCACHE_TEST=1
       addons:
         firefox: latest
       before_install:
