--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/gapi": "^0.0.39",
     "@types/gapi.auth2": "^0.0.51",
     "@types/node": "^13.9.5",
+    "@types/stripe-v3": "^3.1.17",
     "@types/uikit": "^3.3.0",
     "css-loader": "^3.4.2",
     "jquery": "^3.4.1",
