--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/gapi": "^0.0.39",
     "@types/gapi.auth2": "^0.0.51",
     "@types/node": "^13.9.5",
+    "@types/ol": "5",
     "@types/stripe-v3": "^3.1.17",
     "@types/uikit": "^3.3.0",
     "css-loader": "^3.4.2",
@@ -16,6 +17,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nodep-date-input-polyfill": "^5.2.0",
+    "ol": "5",
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
