--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "node-sass": "^4.13.1",
     "nodep-date-input-polyfill": "^5.2.0",
     "ol": "5",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
