--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/stripe-v3": "^3.1.17",
     "@types/uikit": "^3.3.0",
     "css-loader": "^3.4.2",
+    "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.0.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -21,7 +22,6 @@
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
-    "uikit": "^3.3.7",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack4-bundle-tracker": "^0.0.1-beta"
