--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ jobs:
       addons:
         chrome: stable
       before_install:
-        - export CHROMEDRIVER_VERSION=79.0.3945.36
-        - wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
+        - wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE
+        - wget https://chromedriver.storage.googleapis.com/`cat LATEST_RELEASE`/chromedriver_linux64.zip
         - mkdir chromedriver
         - unzip chromedriver_linux64.zip -d chromedriver
         - chmod +x chromedriver/chromedriver
