--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/ol": "5",
     "@types/stripe-v3": "^3.1.17",
     "@types/uikit": "^3.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.0.0",
     "jquery": "^3.4.1",
@@ -22,12 +23,17 @@
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
+    "url-loader": "^4.0.0",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack4-bundle-tracker": "^0.0.1-beta"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.js",
     "dev": "NODE_ENV=development webpack --config webpack.config.js --watch"
   }
 }
