--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ jobs:
       - ENABLE_GEOCACHE_TEST=1
       addons:
         chrome: stable
-      before_install:
-        - wget https://chromedriver.storage.googleapis.com/LATEST_RELEASE
-        - wget https://chromedriver.storage.googleapis.com/`cat LATEST_RELEASE`/chromedriver_linux64.zip
+      before_script:
+        - export CHROMEDRIVER_VERSION=79.0.3945.36
+        - wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
         - mkdir chromedriver
         - unzip chromedriver_linux64.zip -d chromedriver
         - chmod +x chromedriver/chromedriver
@@ -23,7 +23,7 @@ jobs:
         - ENABLE_GEOCACHE_TEST=1
       addons:
         firefox: latest
-      before_install:
+      before_script:
         - export GECKODRIVER_VERSION=v0.26.0
         - wget https://github.com/mozilla/geckodriver/releases/download/$GECKODRIVER_VERSION/geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz
         - mkdir geckodriver
@@ -33,6 +33,8 @@ jobs:
     # docker + smoketest
     - services:
       - docker
+
+      before_install: []
       
       install:
         - docker pull python:3.8-alpine
@@ -48,10 +50,13 @@ jobs:
         - docker stop smoke
     
 
-python:
-  - "3.8"
-node:
-  - "12"
+python: "3.8"
+
+# install the right version of node
+# because we can't use multiple languages at once
+before_install:
+  - nvm install 12
+  - nvm use 12
 
 install:
   - yarn
