--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       addons:
         chrome: stable
       before_script:
-        - export CHROMEDRIVER_VERSION=79.0.3945.36
+        - export CHROMEDRIVER_VERSION=`curl https://chromedriver.storage.googleapis.com/LATEST_RELEASE`
         - wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
         - mkdir chromedriver
         - unzip chromedriver_linux64.zip -d chromedriver
@@ -24,7 +24,7 @@ jobs:
       addons:
         firefox: latest
       before_script:
-        - export GECKODRIVER_VERSION=v0.26.0
+        - export GECKODRIVER_VERSION=`curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep "tag_name" | cut -d '"' -f 4`
         - wget https://github.com/mozilla/geckodriver/releases/download/$GECKODRIVER_VERSION/geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz
         - mkdir geckodriver
         - tar -xzf geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz -C geckodriver
