--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,5 +2,4 @@ pycodestyle==2.5.0
 pytest==5.3.5
 pytest-django==3.8.0
 selenium==3.141.0
-django-selenium-clean==0.3.2
-django-selenium-login==2.0.0
+django-selenium-test==1.0.2
