--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-loader": "^15.9.1",
+    "vue-property-decorator": "^8.4.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
