--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -9,10 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/build-push-action@v1
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
         with:
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: jacobsalumni/membermanagement/portal
-          tags: latest
+          password: ${{ secrets.CR_PAT }}
+          registry: ghcr.io
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: ghcr.io/jacobsalumni/membermanagement:latest
+          platforms: linux/amd64
+          pull: true
+          push: true
