--- a/package.json
+++ b/package.json
@@ -7,34 +7,34 @@
   "private": true,
   "dependencies": {
     "@types/gapi": "^0.0.39",
-    "@types/gapi.auth2": "^0.0.51",
-    "@types/node": "^13.9.5",
-    "@types/ol": "5",
-    "@types/stripe-v3": "^3.1.17",
+    "@types/gapi.auth2": "^0.0.54",
+    "@types/node": "^15.0.2",
+    "@types/ol": "6.4.2",
+    "@types/stripe-v3": "^3.1.23",
     "@types/uikit": "^3.3.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
     "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.3.0",
-    "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "jquery": "^3.6.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^6.0.0",
     "nodep-date-input-polyfill": "^5.2.0",
-    "ol": "5",
-    "pug": "^3.0.1",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.2",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
-    "url-loader": "^4.0.0",
+    "ol": "6.5.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^11.0.1",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-loader": "^15.9.1",
+    "vue-class-component": "^7.2.6",
+    "vue-loader": "^15.9.6",
     "vue-multiselect": "^2.1.6",
-    "vue-property-decorator": "^8.4.1",
+    "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack4-bundle-tracker": "^0.0.1-beta"
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0",
+    "webpack4-bundle-tracker": "https://github.com/JacobsAlumni/webpack-bundle-tracker#v0.4.2-portal"
   },
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.config.js",
