--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.3.0",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
     "nodep-date-input-polyfill": "^5.2.0",
     "ol": "6.5.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "sass": "~1.32.0",
     "sass-loader": "^11.0.1",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
