--- a/.github/workflows/docker-prod.yml
+++ b/.github/workflows/docker-prod.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [prod]
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: jacobsalumni/membermanagement:prod
+  PLATFORMS: linux/amd64
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -13,13 +18,12 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
-          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
       - uses: docker/build-push-action@v2
         with:
-          context: .
-          tags: ghcr.io/jacobsalumni/membermanagement:prod
-          platforms: linux/amd64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          platforms: ${{ env.PLATFORMS }}
           pull: true
           push: true
