--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "GPL3",
   "private": true,
   "dependencies": {
+    "@types/c3": "^0.7.6",
     "@types/node": "^15.0.2",
     "@types/ol": "6.4.2",
     "@types/stripe-v3": "^3.1.23",
     "@types/uikit": "^3.3.0",
+    "c3": "^0.7.20",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
     "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.3.0",
