--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@types/c3": "^0.7.6",
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/node": "^15.0.2",
     "@types/ol": "6.4.2",
     "@types/stripe-v3": "^3.1.23",
@@ -14,6 +15,7 @@
     "c3": "^0.7.20",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
+    "d3-scale-chromatic": "^3.0.0",
     "jacobs-alumni-style": "https://github.com/JacobsAlumni/jacobs-alumni-style.git#v1.3.0",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
