--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         strategy:
             matrix:
                 python: ["3.10"]
-                node: ["12"]
+                node: ["16"]
                 browser: ["chrome", "firefox"]
 
         steps:
@@ -41,7 +41,7 @@ jobs:
         - name: Install Node ${{ matrix.node }}
           uses: actions/setup-node@v1
           with:
-            node-version: "12"
+            node-version: ${{ matrix.node }}
         - name: Run 'yarn install'
           run: yarn install
 
