--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,11 @@ jobs:
             sudo apt-get install -y firefox
             seleniumbase install geckodriver
             pip uninstall -y seleniumbase
-        - name: Run 'pip install'
+        - name: Run 'poetry install'
           run: |
-            pip install -r requirements.txt
-            pip install -r requirements-dev.txt
+            pip install poetry
+            poetry config virtualenvs.create false
+            poetry install
 
         - name: Install Node ${{ matrix.node }}
           uses: actions/setup-node@v1
