--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ django-selenium-test = "1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.8.0", allow-prereleases = true}
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
