frontend: Downgrade 'ol' package
This commit downgrades the 'ol' package to use an older version so that
the layout works again.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/c3": "^0.7.6",
     "@types/d3-scale-chromatic": "^3.0.0",
     "@types/node": "^15.0.2",
-    "@types/ol": "6.4.2",
+    "@types/ol": "^5.0.0",
     "@types/stripe-v3": "^3.1.23",
     "@types/uikit": "^3.3.0",
     "c3": "^0.7.20",
@@ -20,7 +20,7 @@
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^1.6.0",
     "nodep-date-input-polyfill": "^5.2.0",
-    "ol": "6.5.0",
+    "ol": "^5.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "~1.32.0",
