--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.config.js",
     "dev": "NODE_ENV=development webpack --config webpack.config.js --watch"
+  },
+  "resolutions": {
+    "d3-color": "^3.1.0"
   }
 }
