ci: Update browser installation methods
This commit updates the method for installing a headless browser for use
with selenium. Previously, it was installed globally using the
'seleniumbase' tool. This commit updates to first install 'seleniumbase'
into a venv, and then install browsers globally. This prevents
dependency conflicts.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,17 +22,27 @@ jobs:
         - name: Install Chrome Webdriver
           if: ${{ matrix.browser == 'chrome' }}
           run: |
+            python3 -m venv venv
+            source venv/bin/activate
+
             pip install seleniumbase
             sudo apt-get install -y google-chrome-stable
             seleniumbase install chromedriver
-            pip uninstall -y seleniumbase
+            
+            deactivate
+            rm -rf venv
         - name: Install Firefox Webdriver
           if: ${{ matrix.browser == 'firefox' }}
           run: |
+            python3 -m venv venv
+            source venv/bin/activate
+
             pip install seleniumbase
             sudo apt-get install -y firefox
-            seleniumbase install geckodriver
-            pip uninstall -y seleniumbase
+            seleniumbase install chromedriver
+            
+            deactivate
+            rm -rf venv
         - name: Run 'poetry install'
           run: |
             pip install poetry
