pytest: Treat warnings as errors
This commit treats all warnings as errors in pytest, with specific
permitted exceptions.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,15 @@
 [pytest]
 norecursedirs = node_modules
 DJANGO_SETTINGS_MODULE = MemberManagement.test_settings
+filterwarnings =
+    # All warnings are an error - we don't want to miss them
+    error
+
+    # Exceptions that occur in situations where they can't be raised to the caller.
+    # This occurs only in <_io.FileIO>, hence we can ignore this.
+    ignore::pytest.PytestUnraisableExceptionWarning
+
+    # 'django_countries' uses 'pkg_resources' in a legacy manner
+    # This would have to be fixed upstream.
+    ignore::DeprecationWarning:django_countries.fields:5
+    ignore::DeprecationWarning:pkg_resources:2871
