pytest: Ignore firefox webdriver warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,10 @@ filterwarnings =
     # This occurs only in <_io.FileIO>, hence we can ignore this.
     ignore::pytest.PytestUnraisableExceptionWarning
 
+    # The firefox webdriver throws some deprecation warnings.
+    # This has to be ignored for now.
+    ignore::DeprecationWarning:selenium.webdriver.firefox.*
+
     # 'django_countries' uses 'pkg_resources' in a legacy manner
     # This would have to be fixed upstream.
     ignore::DeprecationWarning:django_countries.fields:5
