Update Leos email

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "membermanagement"
 version = "0.1.0"
 description = "The Django Application for managing Jacobs University Bremen Alumni Members."
-authors = ["Tom Wiesing <tkw01536@gmail.com>", "Leonhard Kuboschek <leo@legartis.ai>"]
+authors = ["Tom Wiesing <tkw01536@gmail.com>", "Leonhard Kuboschek <leo@kuboschek.me>"]
 license = "GPL3"
 
 [tool.poetry.dependencies]
