--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ jsonfield = "^3.1.0"
 openpyxl = "^3.1.2"
 raven = "^6.10.0"
 stripe = "^4.0.2"
-google-auth = "1.11.2"
+google-auth = "^1"
 django-sesame = "^3.2"
 pre-js-py = "^1.2.0"
 google-api-python-client = "1.7.11"
