--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ stripe = "^4.0.2"
 google-auth = "^1"
 django-sesame = "^3.2"
 pre-js-py = "^1.2.0"
-google-api-python-client = "1.7.11"
+google-api-python-client = "1.12.11"
 beautifulsoup4 = "^4.12.2"
 django-htmlmin = "^0.11.0"
 requests = "^2.32.0"
@@ -35,7 +35,7 @@ whitenoise = "^6.2.0"
 lxml = "^4.9.1"
 pytz = "^2023.3"
 
-[tool.poetry.dev-dependencies]
+[poetry.group.dev.dependencies]
 pycodestyle = "2.6.0"
 pytest = "6.2.5"
 pytest-django = "3.9.0"
